<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:title="@string/change_location"
    app:iconTint="@color/login_header"
    android:icon="@drawable/ic_edit_location"
    android:id="@+id/location"/>

    <item
        android:title="@string/change_profile_picture"
        android:id="@+id/profileChange"
        android:icon="@drawable/ic_account_circle"
        app:iconTint="@color/login_header"/>

    <item
        android:title="@string/my_messages"
        android:id="@+id/messages"
        android:icon="@drawable/ic_message"
        app:iconTint="@color/login_header"/>

    <item
        android:title="@string/report_user"
        android:id="@+id/reportUser"
        android:icon="@drawable/ic_baseline_privacy_tip_24"
        app:iconTint="@color/login_header"/>
</menu>