<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:text="@string/permission_header"
        android:textColor="@color/whiteTransparent"
        android:background="@drawable/category_back"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/header"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="@color/white_full_transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_back"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage"
                    android:drawableStart="@drawable/ic_baseline_sd_storage_24"
                    android:textColor="@color/login_header"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/inorder_to_create_app_databases_and_store_item_images_locally"
                    android:textColor="@color/whiteTransparent"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_back"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_state"
                    android:drawableStart="@drawable/ic_baseline_signal_cellular_alt_24"
                    android:textColor="@color/login_header"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_state_explanation"
                    android:textColor="@color/whiteTransparent"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_back"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:drawableStart="@drawable/ic_my_location"
                    android:textColor="@color/login_header"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location_explanation"
                    android:textColor="@color/whiteTransparent"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/dark_back"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_calls"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/phone_in_talk"
                    android:textColor="@color/login_header"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calls_explanation"
                    android:textColor="@color/whiteTransparent"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

<com.google.android.material.button.MaterialButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_margin="10dp"
    android:id="@+id/ok"
    android:text="@string/ok"/>

</RelativeLayout>