<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FragmentWelcome">

  <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/logo1"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_the_market"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:gravity="center"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_text2"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/inconsolata"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_next"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:id="@+id/buttonNext1"/>


</LinearLayout>