<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    app:cardElevation="10dp"
    android:background="@color/color_white"
    app:cardBackgroundColor="@color/color_white"
    app:contentPadding="5dp"
    android:layout_margin="10dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/img7"
                android:scaleType="centerCrop"
                android:id="@+id/categoryImage"
                android:contentDescription="@string/category_image" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="20dp"
            android:id="@+id/categ"
                android:fontFamily="@font/benardmtcondensed"
                android:textColor="@color/color_white"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@drawable/category_back"
            android:layout_below="@+id/categoryImage"

            android:text="@string/post_category"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/categ"
            android:id="@+id/desc"
            android:text="@string/category_description"/>

</androidx.cardview.widget.CardView>