<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    app:theme="@style/AppTheme"
    tools:context=".activities.MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        style="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true"
        android:background="@color/whiteTransparent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/login_header"
        app:titleTextColor="@color/whiteTransparent"
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:id="@+id/options"
                android:gravity="end"/>

    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <ViewFlipper
android:layout_width="match_parent"
android:layout_marginTop="7dp"
android:layout_height="@dimen/flipper_height"
android:layout_marginStart="5dp"
android:layout_marginEnd="5dp"
android:layout_below="@+id/appbar"
android:id="@+id/FlipV">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img7"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"
        android:tag="flipper Image" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_back"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:fontFamily="@font/matura_capitals"
        android:text="@string/a_wide_range_of_products"
        android:gravity="center"
        android:textSize="@dimen/field_text_size"
        android:layout_centerVertical="true"
        />

</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img8"
        android:contentDescription="@string/flipper_image"
        android:scaleType="centerCrop"
        />
    <TextView
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:background="@drawable/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoes_and_footwear"
        android:fontFamily="@font/matura_capitals"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img11"
        android:contentDescription="@string/flipper_image"
        android:scaleType="centerCrop" />
    <TextView
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clothes_and_body_wear"
        android:background="@drawable/login_back"
        android:fontFamily="@font/matura_capitals"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/electronics"
        android:contentDescription="@string/flipper_image"
        android:scaleType="centerCrop" />
    <TextView
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        android:fontFamily="@font/matura_capitals"
        android:background="@drawable/login_back"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</RelativeLayout>


</ViewFlipper>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="10dp"
                android:text="@string/pick_a_category_to_begin"
                android:padding="5dp"
                android:id="@+id/pick"
                android:layout_below="@+id/FlipV"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_back"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_marginBottom="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/pick"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:id="@+id/recycler"/>


</RelativeLayout>
